charts/wave_1_32_7/tbd/wave-build-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-internal-networks
  namespace: wave-build
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        # This is a pre-populated with a standard set of reserved IPs (see https://en.wikipedia.org/wiki/Reserved_IP_addresses)
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 100.64.0.0/10
              - 127.0.0.0/8
              - 169.254.0.0/16
              - 172.16.0.0/12
              - 192.0.0.0/24
              - 192.0.2.0/24
              - 192.88.99.0/24
              - 192.168.0.0/16
              - 198.18.0.0/15
              - 198.51.100.0/24
              - 203.0.113.0/24
              - 224.0.0.0/4
              - 233.252.0.0/24
              - 240.0.0.0/4
              - 255.255.255.255/32
